--- a/src/app/repayment/repayment.component.html
+++ b/src/app/repayment/repayment.component.html
@@ -1,97 +1,175 @@
+
 <div class="container" *ngIf="!isPaymentModalVisible">
-    <h2>Repayment Details</h2>
-
-    <div class="mb-3">
-        <label for="userSelect" class="form-label">Select User:</label>
-        <select id="userSelect" [(ngModel)]="userId" name="userId"
-            (change)="loadRepaymentSchedule(); loadOutstandingBalance()" class="form-select">
-            <option value="user1@gmail.com">user1</option>
-            <option value="user2@gmail.com">user2</option>
-            <option value="user3@gmail.com">user3</option>
-        </select>
+    <div *ngIf="errorMessage" class="alert alert-danger text-center justify-content-center position-static" >
+        {{ errorMessage }}
     </div>
-    <p class="balance alert alert-info d-flex align-items-center justify-content-between">
-        <span>
-            <strong>Total Outstanding Payment (PENDING):</strong>
-            <span class="m-3 badge bg-secondary p-2" style="font-size: 16px;">{{ outstandingBalance | currency: 'INR' }}</span>
-        </span>
-        <button class="btn btn-primary" [disabled]="!filteredRepayments || filteredRepayments.length === 0" (click)="downloadPDF()">Download PDF</button>
-    </p>
+    <div class="row mb-3 align-items-center">
+        <div class="col-md-3 d-flex justify-content-start">
+            <h4>
+                <span class="badge bg-muted text-dark">
+                    Name: {{ userId.toString().split('@')[0] }}
+                </span>
+            </h4>
+        </div>
 
-    <div class="table-responsive">
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th>S.NO</th>
-                    <th>RepaymentId</th>
-                    <th>MonthlyDue</th>
-                    <th>Principal Repayment</th>
-                    <th>Interest</th>
-                    <th>Outstanding Balance</th>
-                    <th>Due Date</th>
-                    <th>Payment Date</th>
-                    <th>
-                        Status
-                        <button class="btn btn-sm btn-link d-flex align-items-center justify-content-center" (click)="toggleStatusFilter()" style="padding: 0;">
-                            <i class="bi" 
-                               [ngClass]="{'bi-caret-down-fill': !isFilteringPending, 'bi-caret-up-fill': isFilteringPending}" 
-                               style="background-color: black; display: inline-block; width: 16px; height: 16px; text-align: center;">
-                            </i>
-                        </button>
-                    </th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngIf="!filteredRepayments || filteredRepayments.length === 0">
-                    <td colspan="10" class="text-center">No Data Available</td>
-                </tr>
-                <tr *ngFor="let repayment of filteredRepayments; let i = index">
-                    <td data-label="S.NO">{{ i + 1 }}</td>
-                    <td data-label="RepaymentId">{{ repayment.repaymentId }}</td>
-                    <td data-label="MonthlyDue">{{ repayment.monthPay }}</td>
-                    <td data-label="Principal Repayment">
-                        {{ repayment.principalRepayment | currency: 'INR' }}
-                    </td>
-                    <td data-label="Interest">{{ repayment.interest | currency: 'INR' }}</td>
-                    <td data-label="Outstanding Balance">
-                        {{ repayment.outstandingBalance | currency: 'INR' }}
-                    </td>
-                    <td data-label="Due Date">
-                        <span class="badge bg-danger">{{ repayment.dueDate | date: 'yyyy-MM-dd' }}</span>
-                    </td>
-                    <td data-label="Payment Date">
-                        <span class="badge bg-primary">
-                            {{
-                            repayment.paymentDate ? (repayment.paymentDate | date: 'yyyy-MM-dd') :
-                            'N/A'
-                            }}
-                        </span>
-                    </td>
-                    <td data-label="Status">
-                        <span class="badge"
-                            [ngClass]="{'bg-success': repayment.status === 'COMPLETED', 'bg-warning': repayment.status === 'PENDING'}">
-                            {{ repayment.status }}
-                        </span>
-                    </td>
-                    <td data-label="Actions">
-                        <ng-container *ngIf="repayment.status === 'PENDING'; else paidTemplate">
-                            <button 
-                                [disabled]="!canMakePayment(i)" 
-                                (click)="makePayment(repayment.repaymentId, repayment.monthPay, userId)"
-                                class="btn btn-success btn-sm">
-                                <span class="badge">Make Payment</span>
-                            </button>
-                        </ng-container>
-                        <ng-template #paidTemplate>
-                            <span class="badge bg-success">Paid</span>
-                        </ng-template>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="col-md-6 text-center">
+            <h2>Repayment Details</h2>
+            
+        </div>
+        
+        <div class="col-md-3 d-flex justify-content-end">
+            <button class="btn btn-danger logout-btn" (click)="showLogoutModal()">
+                <i class="bi bi-box-arrow-left me-2"></i> Logout
+            </button>
+        </div>
     </div>
+
+    <div class="row mb-3">
+        <div class="col-12">
+            <p class="balance alert alert-info d-flex align-items-center justify-content-between">
+                <span>
+                    <strong>Total Outstanding Payment (PENDING):</strong>
+                    <span class="m-3 badge bg-secondary p-2" style="font-size: 16px;">
+                        {{ outstandingBalance | currency: 'INR' }}
+                    </span>
+                </span>
+                <button class="btn btn-primary" [disabled]="!filteredRepayments || filteredRepayments.length === 0"
+                    (click)="downloadPDF()">
+                    Download PDF
+                </button>
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <div class="table-responsive">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th>S.NO</th>
+                            <th>RepaymentId</th>
+                            <th>MonthlyDue</th>
+                            <th>Principal Repayment</th>
+                            <th>Interest</th>
+                            <th>Outstanding Balance</th>
+                            <th>Due Date</th>
+                            <th>Payment Date</th>
+                            <th>
+                                Status
+                                <button class="btn btn-sm btn-link d-flex align-items-center justify-content-center"
+                                    (click)="toggleStatusFilter()" style="padding: 0;">
+                                    <i class="bi"
+                                        [ngClass]="{'bi-caret-down-fill': !isFilteringPending, 'bi-caret-up-fill': isFilteringPending}"
+                                        style="background-color: black; display: inline-block; width: 16px; height: 16px; text-align: center;">
+                                    </i>
+                                </button>
+                            </th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngIf="!filteredRepayments || filteredRepayments.length === 0">
+                            <td colspan="10" class="text-center">No Data Available</td>
+                        </tr>
+                        <tr *ngFor="let repayment of filteredRepayments; let i = index">
+                            <td data-label="S.NO">{{ i + 1 }}</td>
+                            <td data-label="RepaymentId">{{ repayment.repaymentId }}</td>
+                            <td data-label="MonthlyDue">{{ repayment.monthPay }}</td>
+                            <td data-label="Principal Repayment">
+                                {{ repayment.principalRepayment | currency: 'INR' }}
+                            </td>
+                            <td data-label="Interest">{{ repayment.interest | currency: 'INR' }}
+                            </td>
+                            <td data-label="Outstanding Balance">
+                                {{ repayment.outstandingBalance | currency: 'INR' }}
+                            </td>
+                            <td data-label="Due Date">
+                                <span class="badge bg-danger">
+                                    {{ repayment.dueDate | date: 'yyyy-MM-dd' }}
+                                </span>
+                            </td>
+                            <td data-label="Payment Date">
+                                <span class="badge bg-primary">
+                                    {{
+                                    repayment.paymentDate ? (repayment.paymentDate | date: 'yyyy-MM-dd') : 'N/A'
+                                    }}
+                                </span>
+                            </td>
+                            <td data-label="Status">
+                                <span class="badge"
+                                    [ngClass]="{'bg-success': repayment.status === 'COMPLETED', 'bg-warning': repayment.status === 'PENDING'}">
+                                    {{ repayment.status }}
+                                </span>
+                            </td>
+                            <td data-label="Actions">
+                                <ng-container *ngIf="repayment.status === 'PENDING'; else paidTemplate">
+                                    <button [disabled]="!canMakePayment(i)"
+                                        (click)="makePayment(repayment.repaymentId, repayment.monthPay, userId)"
+                                        class="btn btn-success btn-sm">
+                                        <span class="badge">Make Payment</span>
+                                    </button>
+                                </ng-container>
+                                <ng-template #paidTemplate>
+                                    <span class="badge bg-success">Paid</span>
+                                </ng-template>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    
 </div>
+
+<div
+  class="modal fade logout-modal"
+  id="logoutModal"
+  tabindex="-1"
+  aria-labelledby="logoutModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-top modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="logoutModalLabel">
+          <i class="bi bi-exclamation-triangle-fill text-warning me-2"></i>
+          Confirm Logout
+        </h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body text-center">
+        <p class="modal-message">
+          Are you sure you want to logout?
+        </p>
+      </div>
+      <div class="modal-footer justify-content-center">
+        <button
+          type="button"
+          class="btn btn-secondary btn-sm"
+          data-bs-dismiss="modal"
+        >
+          Cancel
+        </button>
+        <button
+          type="button"
+          class="btn btn-danger btn-sm"
+          data-bs-dismiss="modal"
+          (click)="logout()"
+        >
+          Logout
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div *ngIf="isPaymentModalVisible">
     <app-payment [repaymentId]="repaymentId"
         [amountDue]="amountDue" [userId]="userId"
