--- a/src/app/repayment/repayment.component.html
+++ b/src/app/repayment/repayment.component.html
@@ -1,35 +1,40 @@
-
-<div class="container" *ngIf="!isPaymentModalVisible">
-    <div *ngIf="errorMessage" class="alert alert-danger text-center justify-content-center position-static" >
+<div class="container position-sticky" *ngIf="!isPaymentModalVisible">
+    <div *ngIf="errorMessage" class="alert alert-danger text-center justify-content-center position-static">
         {{ errorMessage }}
     </div>
-    <div class="row mb-3 align-items-center">
-        <div class="col-md-3 d-flex justify-content-start">
-            <h4>
-                <span class="badge bg-muted text-dark">
-                    Name: {{ userId.toString().split('@')[0] }}
-                </span>
-            </h4>
-        </div>
 
-        <div class="col-md-6 text-center">
-            <h2>Repayment Details</h2>
-            
-        </div>
-        
-        <div class="col-md-3 d-flex justify-content-end">
-            <button class="btn btn-danger logout-btn" (click)="showLogoutModal()">
-                <i class="bi bi-box-arrow-left me-2"></i> Logout
-            </button>
+    <div class="row justify-content-center my-4">
+        <div class="col-md-8 col-lg-6">
+            <div class="card shadow-lg border-0 repayment-card">
+                <div class="card-header bg-gradient-primary text-white text-center rounded-top">
+                    <h2 class="h2 mb-0 text-dark" >Repayment Details</h2>
+                </div>
+                <div class="card-body bg-light">
+                    <h4 class="h4 text-dark mb-3">{{loanType}}</h4>
+                    <ul class="list-group list-group-flush mb-3">
+                        <li class="list-group-item d-flex justify-content-between align-items-center bg-transparent border-0">
+                            <span>Principal Amount:</span>
+                            <span class="fw-bold text-success">{{principalAmt}}</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center bg-transparent border-0">
+                            <span>Interest Rate (%):</span>
+                            <span class="fw-bold text-secondary">{{InterestRate}}</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center bg-transparent border-0">
+                            <span>period (Monthly):</span>
+                            <span class="fw-bold text-info">{{period}}</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
-
-    <div class="row mb-3">
+    <div class="row ">
         <div class="col-12">
             <p class="balance alert alert-info d-flex align-items-center justify-content-between">
                 <span>
-                    <strong>Total Outstanding Payment (PENDING):</strong>
-                    <span class="m-3 badge bg-secondary p-2" style="font-size: 16px;">
+                    <strong>Total Outstanding Payment:</strong>
+                    <span class=" badge bg-secondary p-2 mx-4" style="font-size: 16px;">
                         {{ outstandingBalance | currency: 'INR' }}
                     </span>
                 </span>
@@ -44,15 +49,14 @@
     <div class="row">
         <div class="col-12">
             <div class="table-responsive">
-                <table class="table table-bordered">
+                <table class="table table-bordered ">
                     <thead>
                         <tr>
                             <th>S.NO</th>
-                            <th>RepaymentId</th>
-                            <th>MonthlyDue</th>
-                            <th>Principal Repayment</th>
+                            <th>Monthly Due</th>
+                            <th>Principal </th>
                             <th>Interest</th>
-                            <th>Outstanding Balance</th>
+                            <th>Balance</th>
                             <th>Due Date</th>
                             <th>Payment Date</th>
                             <th>
@@ -74,7 +78,6 @@
                         </tr>
                         <tr *ngFor="let repayment of filteredRepayments; let i = index">
                             <td data-label="S.NO">{{ i + 1 }}</td>
-                            <td data-label="RepaymentId">{{ repayment.repaymentId }}</td>
                             <td data-label="MonthlyDue">{{ repayment.monthPay }}</td>
                             <td data-label="Principal Repayment">
                                 {{ repayment.principalRepayment | currency: 'INR' }}
@@ -85,33 +88,30 @@
                                 {{ repayment.outstandingBalance | currency: 'INR' }}
                             </td>
                             <td data-label="Due Date">
-                                <span class="badge bg-danger">
+                                <span class="badge bg-secondary" style="font-size: 14px;">
                                     {{ repayment.dueDate | date: 'yyyy-MM-dd' }}
                                 </span>
                             </td>
-                            <td data-label="Payment Date">
-                                <span class="badge bg-primary">
-                                    {{
-                                    repayment.paymentDate ? (repayment.paymentDate | date: 'yyyy-MM-dd') : 'N/A'
-                                    }}
+                            <td data-label="Payment Date" >
+                                <span class="badge bg-success" style="font-size: 14px;" *ngIf="repayment.paymentDate">
+                                    {{ (repayment.paymentDate | date: 'yyyy-MM-dd') }}
                                 </span>
+                                <span *ngIf="!repayment.paymentDate" class="text-center justify-content-center d-flex">-</span>
                             </td>
                             <td data-label="Status">
-                                <span class="badge"
-                                    [ngClass]="{'bg-success': repayment.status === 'COMPLETED', 'bg-warning': repayment.status === 'PENDING'}">
-                                    {{ repayment.status }}
+                                <span >{{ repayment.status }}
                                 </span>
                             </td>
                             <td data-label="Actions">
-                                <ng-container *ngIf="repayment.status === 'PENDING'; else paidTemplate">
+                                <ng-container *ngIf="repayment.status === 'DUE'; else paidTemplate">
                                     <button [disabled]="!canMakePayment(i)"
                                         (click)="makePayment(repayment.repaymentId, repayment.monthPay, userId)"
                                         class="btn btn-success btn-sm">
-                                        <span class="badge">Make Payment</span>
+                                        <span class="badge">Pay Now</span>
                                     </button>
                                 </ng-container>
                                 <ng-template #paidTemplate>
-                                    <span class="badge bg-success">Paid</span>
+                                    <span>Paid</span>
                                 </ng-template>
                             </td>
                         </tr>
@@ -120,60 +120,12 @@
             </div>
         </div>
     </div>
-    
-</div>
-
-<div
-  class="modal fade logout-modal"
-  id="logoutModal"
-  tabindex="-1"
-  aria-labelledby="logoutModalLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog modal-dialog-top modal-sm">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="logoutModalLabel">
-          <i class="bi bi-exclamation-triangle-fill text-warning me-2"></i>
-          Confirm Logout
-        </h5>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body text-center">
-        <p class="modal-message">
-          Are you sure you want to logout?
-        </p>
-      </div>
-      <div class="modal-footer justify-content-center">
-        <button
-          type="button"
-          class="btn btn-secondary btn-sm"
-          data-bs-dismiss="modal"
-        >
-          Cancel
-        </button>
-        <button
-          type="button"
-          class="btn btn-danger btn-sm"
-          data-bs-dismiss="modal"
-          (click)="logout()"
-        >
-          Logout
-        </button>
-      </div>
-    </div>
-  </div>
 </div>
 
 <div *ngIf="isPaymentModalVisible">
-    <app-payment [repaymentId]="repaymentId"
-        [amountDue]="amountDue" [userId]="userId"
-        (paymentCompleted)="onPaymentCompleted($event)" 
-        (paymentCancelled)="onPaymentCancelled()">
+    <app-payment [repaymentId]="repaymentId" 
+    [amountDue]="amountDue" 
+    [userId]="userId"
+    (paymentCompleted)="onPaymentCompleted($event)" (paymentCancelled)="onPaymentCancelled()">
     </app-payment>
 </div>
